add sponsors in index and affilate page

--- a/affiliate.html
+++ b/affiliate.html
@@ -138,7 +138,79 @@
                 </div>
             </div>
         </div>
-        
+        <!-- other sponsors -->
+        <div class="container-fluid" style="background-color: rgb(0, 75, 145);">
+            <div class="container font-Oswald-b" style="padding:20px 0px;text-align:center;">
+                <h2 class="font-Oswald-b" style="text-align:center;color:rgb(255, 255, 255);font-size:62px;">PREVIOUS EVENT HOSTED IN..</h2>
+                <hr style="border-color:rgb(228, 59, 44);margin-right:200px !important;margin-left:200px !important;border-top-width:3px;padding-bottom:20px;">
+                <div class="row m-4" style="justify-content:center;">
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT DELHI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT DELHI</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT Bombay.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT BOMBAY</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT ROORKEE.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROORKEE</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT KHARAGPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KHARAGPUR</p>
+                    </div>
+                </div>
+                <div class="row m-4" style="justify-content:center;">
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT KANPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KANPUR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT MADRAS.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT MADRAS</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Entrepreneurship Cell, IIT JODHPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT JODHPUR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT GUWHATI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GUWHATI</p>
+                    </div>
+                </div>
+                <div class="row m-4" style="justify-content:center;">
+                    <div class="col-3">
+                        <p><img src="logo/Entrepreneurship Cell, BITS PILANI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">BITS PILANI</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT ROPAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROPAR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT GANDHINAGAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GANDHINAGAR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT PATNA.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT PATNA</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- content 3 -->
         <div class="container-fluid" style="background-color:#fff;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
@@ -240,6 +312,81 @@
                 </div>
                 <div class="col-md-12" style="padding:0px;text-align:center;line-height:1em;display:block;">
                     <img src="icons/fa-quote-right.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- OUR ASSOCIATIONS -->
+        <div class="container-fluid" style="background-color: rgb(0, 75, 145);">
+            <div class="container font-Oswald-b" style="padding:20px 0px;text-align:center;">
+                <h2 class="font-Oswald-b" style="text-align:center;color:rgb(255, 255, 255);font-size:60px;">OUR ASSOCIATIONS</h2>
+                <hr style="border-color:rgb(228, 59, 44);border-top-width:3px;padding-bottom:20px;">
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT DELHI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT DELHI</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT Bombay.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT BOMBAY</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT ROORKEE.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROORKEE</p>
+                    </div>
+                </div>
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT KHARAGPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KHARAGPUR</p>
+                    </div>              
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT KANPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KANPUR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT MADRAS.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT MADRAS</p>
+                    </div>
+                </div>
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Entrepreneurship Cell, IIT JODHPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:30px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT JODHPUR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT GUWHATI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:30px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GUWHATI</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Entrepreneurship Cell, BITS PILANI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:30px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">BITS PILANI</p>
+                    </div>
+                </div>
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT ROPAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROPAR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT GANDHINAGAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GANDHINAGAR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT PATNA.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT PATNA</p>
+                    </div>
                 </div>
             </div>
         </div>
