--- a/index.html
+++ b/index.html
@@ -220,6 +220,79 @@
                 </div>
             </div>
         </div>
+        <!-- other sponsors -->
+        <div class="container-fluid" style="background-color: rgb(0, 75, 145);">
+            <div class="container font-Oswald-b" style="padding:20px 0px;text-align:center;">
+                <h2 class="font-Oswald-b" style="text-align:center;color:rgb(255, 255, 255);font-size:62px;">PREVIOUS EVENT HOSTED IN..</h2>
+                <hr style="border-color:rgb(228, 59, 44);margin-right:200px !important;margin-left:200px !important;border-top-width:3px;padding-bottom:20px;">
+                <div class="row m-4" style="justify-content:center;">
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT DELHI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT DELHI</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT Bombay.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT BOMBAY</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT ROORKEE.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROORKEE</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT KHARAGPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KHARAGPUR</p>
+                    </div>
+                </div>
+                <div class="row m-4" style="justify-content:center;">
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT KANPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KANPUR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT MADRAS.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT MADRAS</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Entrepreneurship Cell, IIT JODHPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT JODHPUR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT GUWHATI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GUWHATI</p>
+                    </div>
+                </div>
+                <div class="row m-4" style="justify-content:center;">
+                    <div class="col-3">
+                        <p><img src="logo/Entrepreneurship Cell, BITS PILANI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">BITS PILANI</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT ROPAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROPAR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT GANDHINAGAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GANDHINAGAR</p>
+                    </div>
+                    <div class="col-3">
+                        <p><img src="logo/Finance Club, IIT PATNA.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT PATNA</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- content 2 -->
         <div class="container-fluid" style="background-image:url(images/grey-geo.jpg);background-size:cover;">
             <div class="row"
@@ -853,7 +926,58 @@
                 </div>
             </div>
         </div>
-
+        <!-- reviews -->
+        <div class="container-fluid" style="background-image:url(icons/brillant.png);">
+            <div class="container" style="padding:30px 0px;margin:0 auto;">
+                <h2 class="font-Oswald-b" style="text-align:center;color:rgb(0, 117, 178);font-size:46px;">Student Reviews</h2>
+                <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-interval="10000">
+                            <div class="row" style="padding:20px 0px;display:flex;justify-content:center;">
+                                <div class="col-md-3 youtube1" data-embed="Sz8AEMqRrXM" style="height:240px;display:flex;justify-content:flex-end;">
+                                    <div class="block video-block">
+                                        <div class="play-button"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 youtube1" data-embed="3IOtpCgXYKo" style="height:240px;display:flex;justify-content:center;">
+                                    <div class="block video-block">
+                                        <div class="play-button"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 youtube1" data-embed="FJoUTZnaWgI" style="height:240px;display:flex;justify-content:flex-start;">
+                                    <div class="block video-block">
+                                        <div class="play-button"></div>
+                                    </div>
+                                </div>                   
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-interval="2000">
+                            <div class="row" style="padding:20px 0px;display:flex;justify-content:center;">
+                                <div class="col-md-3 youtube1" data-embed="C3FKCxO0-5A" style="height:240px;display:flex;justify-content:flex-end;">
+                                    <div class="block video-block">
+                                        <div class="play-button"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 youtube1" data-embed="gR9DmD0GVG0" style="height:240px;display:flex;justify-content:center;">
+                                    <div class="block video-block">
+                                        <div class="play-button"></div>
+                                    </div>
+                                </div>       
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>                    
+                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:30px;">For more Such videos <a style="color:red;" href="checkout"> here ...</a></h2>
+            </div>
+        </div>
         <!-- content faq -->
         <div class="container-fluid" style="background-color:rgb(0, 75, 145);">
             <div class="container" style="padding:20px 0px;margin:0 auto;">
@@ -1487,6 +1611,81 @@
                 
             </div>
         </div>
+        <!-- other sponsors -->
+        <div class="container-fluid" style="background-color: rgb(0, 75, 145);">
+            <div class="container font-Oswald-b" style="padding:20px 0px;text-align:center;">
+                <h2 class="font-Oswald-b" style="text-align:center;color:rgb(255, 255, 255);font-size:60px;">PREVIOUS EVENT HOSTED IN..</h2>
+                <hr style="border-color:rgb(228, 59, 44);border-top-width:3px;padding-bottom:20px;">
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT DELHI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT DELHI</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT Bombay.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT BOMBAY</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT ROORKEE.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROORKEE</p>
+                    </div>
+                </div>
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT KHARAGPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KHARAGPUR</p>
+                    </div>              
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT KANPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT KANPUR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT MADRAS.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT MADRAS</p>
+                    </div>
+                </div>
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Entrepreneurship Cell, IIT JODHPUR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:30px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT JODHPUR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT GUWHATI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:30px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GUWHATI</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Entrepreneurship Cell, BITS PILANI.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:30px;margin-bottom:0px;">Entrepreneurship Cell</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">BITS PILANI</p>
+                    </div>
+                </div>
+                <div class="row mt-4" style="justify-content:center;">
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT ROPAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT ROPAR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT GANDHINAGAR.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT GANDHINAGAR</p>
+                    </div>
+                    <div class="col-4">
+                        <p><img src="logo/Finance Club, IIT PATNA.png" width="100" height="100"></p>
+                        <p style="font-size:25px;color:#fff;line-height:15px;margin-bottom:0px;">Finance Club</p>
+                        <p style="font-size:25px;color:#fff;font-weight:bold;">IIT PATNA</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- content 2 -->
         <div class="container-fluid" style="background-image:url(images/grey-geo1.jpg);background-size:cover;">
             <div class="row" style="padding-bottom:20px;margin:0px auto;outline:none;max-width:100%;">
@@ -2107,7 +2306,29 @@
                 </div>
             </div>
         </div>
-
+        <!-- reviews -->
+        <div class="container-fluid" style="background-image:url(icons/brillant.png);">
+            <div class="container-fluid" style="padding:30px 0px;margin:0 auto;">
+                <h2 class="font-Oswald-b" style="text-align:center;color:rgb(0, 117, 178);font-size:78px;">Student Reviews</h2>
+                <hr style="border-color:rgb(228, 59, 44);margin-right:110px !important;margin-left:110px !important;border-top-width:3px;margin-top:20px;">
+                <div class="col-md-12 youtube2" data-embed="Sz8AEMqRrXM" style="padding:10px 0px;display:flex;justify-content:center;">
+                    <div class="play-button"></div>
+                </div>                
+                <div class="col-md-12 youtube2" data-embed="3IOtpCgXYKo" style="padding:10px 0px;display:flex;justify-content:center;">
+                    <div class="play-button"></div>
+                </div>  
+                <div class="col-md-12 youtube2" data-embed="FJoUTZnaWgI" style="padding:10px 0px;display:flex;justify-content:center;">
+                    <div class="play-button"></div>
+                </div> 
+                <div class="col-md-12 youtube2" data-embed="C3FKCxO0-5A" style="padding:10px 0px;display:flex;justify-content:center;">
+                    <div class="play-button"></div>
+                </div>  
+                <div class="col-md-12 youtube2" data-embed="gR9DmD0GVG0" style="padding:10px 0px;display:flex;justify-content:center;">
+                    <div class="play-button"></div>
+                </div>
+                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:10px;">For more Such videos <a style="color:red;" href="checkout"> here ...</a></h2>
+            </div>
+        </div>
         <!-- content faq -->
         <div class="container-fluid" style="background-color:rgb(0, 75, 145);padding:20px 0px;">
             <div class="row" style="padding:20px 0px;margin:0px auto;outline:none;width:90%;display:flex;justify-content:center;">
