--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                                 </div>
                                 <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 23px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                    (Available till 25st April)</h2>
+                                    (Available till 28th April)</h2>
                                 </div>
                                 <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                     <section class="pricely-chart-two font-roboto-r">
@@ -806,7 +806,7 @@
                                                         <b>597</b>
                                                     </div>
                                                 </div>
-                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 25st April
+                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 28th April
                                                 </div>
                                             </div>
                                             <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -1260,7 +1260,7 @@
                                 </div>
                                 <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 23px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                    (Available till 25st April)</h2>
+                                    (Available till 28th April)</h2>
                                 </div>
                                 <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                     <section class="pricely-chart-two font-roboto-r">
@@ -1275,7 +1275,7 @@
                                                         <b>597</b>
                                                     </div>
                                                 </div>
-                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 25st April
+                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 28th April
                                                 </div>
                                             </div>
                                             <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -2170,7 +2170,7 @@
                             </div>
                             <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:30px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                (Available till 25st April)</h2>
+                                (Available till 28th April)</h2>
                             </div>
                             <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                 <section class="pricely-chart-two font-roboto-r" style="font-size:30px;">
@@ -2565,7 +2565,7 @@
                             </div>
                             <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:30px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                (Available till 25st April)</h2>
+                                (Available till 28th April)</h2>
                             </div>
                             <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                 <section class="pricely-chart-two font-roboto-r" style="font-size:30px;">
@@ -2580,7 +2580,7 @@
                                                     <b>597</b>
                                                 </div>
                                             </div>
-                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 25st April
+                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 28th April
                                             </div>
                                         </div>
                                         <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -2768,7 +2768,7 @@
     });
 
     // The data/time we want to countdown to
-    var countDownDate = new Date("apr 25, 2020 24:00:00").getTime();
+    var countDownDate = new Date("apr 28, 2020 24:00:00").getTime();
 
     // Run myfunc every second
     var myfunc = setInterval(function() {
