update coupon code

--- a/checkout.html
+++ b/checkout.html
@@ -218,12 +218,12 @@
                                 <li><b>Venue:</b> Online Event</li>
                                 <p style="font-size:25px;padding-top:5px;margin-bottom:0px;"><strike
                                         class="strike"><b>&#8377;1,997</b></strike> <span id="price"
-                                        style="color:#2fbe6d;">&#8377;497</span></p>
+                                        style="color:#2fbe6d;">&#8377;597</span></p>
                             </ul>
                             <div class="couponDiv" style="padding:10px;display:flex;font-size:21px;">
                                 <input type="text" name="coupon" id="in" class="coupon" title="Enter coupon"
                                     style="border-top-left-radius: 10px;border-bottom-left-radius: 10px;border:2px solid #2fbe6d;width:160%;text-align:center;">
-                                <a onclick="validate(coupon)" id="err" class="btn-green btn-block caps"
+                                <a onclick="validate()" id="err" class="btn-green btn-block caps"
                                     style="padding:10px;background-color:#2fbe6d;border-top-right-radius:10px;border-bottom-right-radius:10px;color:#fff;font-size:15px;text-align:center;cursor:pointer;">Apply
                                     Coupon</a>
                             </div>
@@ -437,13 +437,13 @@
                             <li style="padding-bottom:5px;"><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                             <li style="padding-bottom: 5px;"><b>Venue:</b> Online Event</li>
                             <p style="font-size: 25px;"><strike class="strike-mobile"><b>&#8377;1,997</b></strike> <span
-                                    id="price-mobile" style="color:#2fbe6d;">&#8377;497</span></p>
+                                    id="price-mobile" style="color:#2fbe6d;">&#8377;597</span></p>
                         </ul>
                         <div class="couponDiv-mobile" style="padding:10px;display:flex;font-size:18px;">
                             <input type="text" name="coupon-mobile" id="in-mobile" class="coupon-mobile text-center"
                                 title="Enter coupon"
                                 style="border-top-left-radius: 10px;border-bottom-left-radius: 10px;border:2px solid #2fbe6d;width:145%;">
-                            <a onClick="validate(couponMob)" id="err-mobile" class="btn-green btn-block caps"
+                            <a onClick="validate()" id="err-mobile" class="btn-green btn-block caps"
                                 style="padding: 5px;background-color:#2fbe6d;border-top-right-radius: 10px;border-bottom-right-radius: 10px;color:#fff;font-size:20px;text-align:center;">Apply
                                 Coupon</a>
                         </div>
